fine lezione laboratoriale

--- a/2. Alfabeti, Linguaggi ed Espressioni Regolari.md
+++ b/2. Alfabeti, Linguaggi ed Espressioni Regolari.md
@@ -50,3 +50,47 @@ In generale: i linguaggi regolari possono essere riconosciuti da automi a stati 
 #Vedi algoritmi che lavorano su stream e non su dati "rather fixed"
 
 #Attenzione$L = \{\text{a}^n \text{b}^n| n > 0\}$ non è riconoscibile da un automa a stati finiti, mentre $L = \{\text{a}^n \text{b}^m| n > 0, m > 0\}$ perché n e m scorrelati, quindi bastano due stati
+
+# Espressioni regolari
+#Completa 
+#Vedi esercizio in cui non possono essere presenti uni consecutivi
+## Problemi
+Con le espressioni regolari di base non è possibile esprimere la **negazione** -> si possono creare per enumerazione.
+
+Con le espressioni regolari non si può contare, quindi limitare il numero di caratteri
+
+#Nota se un linguaggio è regolare è anche context free, ma non vale il contrario. Inclusione propria. 
+
+## POSIX
+Consente *metacaratteri* (anche se sono fatti di più simboli) per scopi descrittivi:
+- parentesi, `|` e `*`
+- `[:digit:]`
+- #Completa 
+
+Caratteri inclusi tra parentesi quadre si suppongono in OR:
+```
+[_[:alnum:]]  // underscore o carattere alfanumerico
+```
+
+La negazione si applica con il *caret* o *accento circonflesso* -> viene espansa come una macro
+```
+[^[:alnum:]]
+```
+
+Intervalli di caratteri o numeri, secondo l'ordinamento di quel set:
+```
+[a-f]
+```
+
+### Esercizio: riconoscimento identificatori Python
+```
+[_[:alpha:]][_[:alnum:]]*
+```
+
+#Nota che l'underscore è usato nei for come variabile di scorrimento dai puristi di Python
+
+#Attenzione: problema dei frontend. Pensa a `formula` che deve essere riconosciuto come identificatore ma non come `for`
+
+#Esercizi a pagina 20 di Espressioni regolari
+
+Compilazione: `flex -+ hello_tok.l && g++ lex.yy.cc && ./a.out`
