fine lezione - 1d later

--- a/4. FSM.md
+++ b/4. FSM.md
@@ -78,3 +78,64 @@ Le *$\epsilon$-transizioni* sono in grado di passare da uno stato all'altro senz
 Uno stato iniziale e uno finale.
 
 La creazione un automa non-deterministico a partire da una regex è un passaggio meccanico.
+
+# Da regex a AFD
+## Fase 2: Mapping AFND - AFD
+Non corro il rischio di esplodere? Sì. Se ho N stati in AFND potrei avere fino a $2^N$ stati (numero di sottoinsiemi dell'insieme degli stati di AFND) in AFD
+
+#x010 
+
+Indichiamo con $A$ lo stato iniziale di $D$. $A$ è un insieme che contiene tutti gli stati dell'AFND in cui può trovarsi l'automa senza consumare input (si considerano solo le epsilon-transizioni).
+**Operazione di chiusura**: $\epsilon$-closure(0) = A -> stato [det] di boot
+Si definisce un procedimento ricorsivo che termina quando non abbiamo più stati esplorabili
+
+```
+A = stato di boot
+Per ogni stato non marcato nello sato [det] che stiamo esaminando
+	Per ogni possibile simbolo (considerando anche le epsilon-transizioni)
+		aggiungi ogni stato [non det] raggiungibile allo stato [det]
+```
+#Nota che lo stato deterministico è un insieme di stati non deterministici
+
+Per l'automa non deterministico si definisce: $\delta^d (A, a) = B$ con delta funzione di transizione e gli argomenti letti "dallo stato A su input a".
+
+Dato che il sottoinsieme di stati possibili è $2^n-1$ il procedimento ricorsivo terminerà
+
+Tutti gli stati finali dell'AFD sono quelli che contengono almeno uno stato finale dell'AFND
+
+#Assignment Il numero di stati non è esplicito, si può dedurre dal numero di righe; usa array associativi della STL (per ogni stato il valore di arrivo è un set di stati).
+
+#Vedi *data structuring*
+## Fase 1: Creazione di AFND da regex
+Costruiremo l'AFND ricorsivamente:
+- insieme di building blocks (automi AFND che riconoscono alcuni simboli dell'alfabeto)
+- regole di costruzione
+
+Per ogni simbolo dell'alfabeto $\cup$ a $\epsilon$ ho un AFND che riconosce i simboli dell'alfabeto.
+
+#Completa 
+
+### Rappresentazione di una regex
+Una regex è ben rappresentabile come AST - Abstract Syntax Tree - con operandi sulle foglie e operatori sui nodi
+
+Le regole di precedenza sono:
+- star - equivalente di *exp* (unico operatore unario)
+- concatenazione - equivalente di *per*
+- or - equivalente di *più*
+
+Visita in post-ordine (operatore del nodo dopo visita al figlio sinistro e poi destro) dell'AST e ricostruisco la regex.
+
+#Nota il parsing è l'inverso della linearizzazione. Trasforma in albero una struttura lineare (ad esempio una frase di un linguaggio di programmazione)
+
+### Rappresentazione di un albero
+```
+dato albero X
+	se X è foglia ret X
+	set X nodo interno ret
+		(X (SX)) se X = *
+		(X (SX) (DX)) se X = | o •
+```
+
+Come in LaTeX: https://ctan.org/pkg/synttree
+
+Stato normalizzato dell'automa ha uno stato unico di ingresso, solo due nodi di uscita consentiti
