--- a/5. Linguaggi context-free e grammatiche.md
+++ b/5. Linguaggi context-free e grammatiche.md
@@ -92,3 +92,89 @@ Sebbene i linguaggi di programmazione abbiano caratteristiche sintattiche descri
 |0|ricorsiva|macchina di Turing|ricorsivamente enumerabile|
 
 #Esercizio linguaggio delle parentesi bilanciate $E \rightarrow \epsilon | (E)E$ attraverso un ragionamento induttivo
+
+# Categorie sintattiche
+Ogni categoria sintattica definisce un sottolinguaggio, con le sue regole e a sua volta la sua sintassi. È un linguaggio all'interno del linguaggio.
+
+Convenzioni:
+- caratteri in virgolette
+- caratteri non terminali in corsivo
+
+L'ambiguità viene tollerata dai linguaggi, non risolta a questo livello
+
+#x016 
+#x017 Ci sono due derivazioni ambigue (sostanzialmente differenti)
+
+I parser usano algoritmi ricorsivi con backtracking (se sbaglio torno indietro alle produzioni in cui avevo più scelte disponibili).
+
+I linguaggi regolari possono essere descritti da grammatiche libere (overpower) #x018
+
+# Grammatiche equivalenti
+Due grammatiche equivalenti che generano espressioni aritmetiche:
+$$E \to E+E | E*E$$
+$$E \to (E) | number$$
+
+Oppure una grammatica equivalente che forza la precedenza degli operatori:
+$$E \to E+E$$
+
+#Completa 
+# Parse tree
+O alberi di derivazione
+È un albero radicato ed etichettato:
+- i nodi interni sono etichettati con simboli non terminali
+- le foglie sono etichettate con simboli terminali o $\epsilon$
+- la relazione padre-figlio è dettata dalle produzioni (nel nodo la parte destra, nelle foglie la parte sinistra)
+- nella radice si trova l'assioma
+
+Un albero sintattico descrive una derivazione? sì e no. Ad un parse tree possono corrispondere più derivazioni, ma questo non determinismo è marginale rispetto alla struttura dell'albero.
+
+## Derivazioni canoniche
+Derivazioni canoniche destre e sinistre.
+- destra: sviluppa sempre il non terminale più a destra
+- sinistra: sviluppa sempre il non terminale più a sinistra
+
+Qual'è meglio? dipende dal tipo di parsing. Per il top down è meglio sinistre, per il bottom up è meglio derivazioni destre.
+
+Fissata una derivazione canonica esiste un cammino unico sull'albero.
+
+## Grammatiche ambigue
+Si chiamano **ambigue** le grammatiche per cui anche se fissi una derivazione canonica per una stessa stringa possono essere generati parse tree differenti.
+
+#x019
+
+>Il parsing è il passaggio da una struttura lineare a una struttura bidimensionale
+
+#Vedi if aperti (senza else) e chiusi. L'else viene fatto matchare con l'if più vicino.
+
+Condizionale aperto e chiuso. Esiste una grammatica senza interpretazioni ambigue.
+#Completa 
+
+## Grammatiche cicliche
+Se sono presenti derivazioni del tipo $A \Rightarrow A$
+I parser usano algoritmi deterministici. Seguita una strada di produzioni seguiranno sempre quella. Si possono piantare in cicli.
+
+I parser usano un *lookahead* -> sguardo in avanti di N simboli
+
+## Grammatiche con prefissi comuni
+Con due o più produzioni relative allo stesso nonterminale
+$$S \to A\alpha_1$$ $$S \to A\alpha_2$$
+
+Algo che risolve il problema:
+- si numerano i terminali
+- non può avvenire che una produzione abbia a destra un non terminale di grado più basso del non terminale di sinistra. Devono essere sempre piccolo -> grande
+
+Viene snaturata leggermente la grammatica
+
+#x020 Verrà mai fuori la derivazione sbagliata? No, viene forzato l'uso delle parentesi
+#x021 usa sempre l'ordine degli operatori corretto
+
+#Ricorda di sommare sempre dai valori più piccoli a quelli più grandi
+
+Associatività:
+- per, più e diviso a sinistra
+- sottrazione ed esponenziale associativi a destra
+
+Grammatica che parsa correttamente tutte le espressioni aritmetiche:
+#completa con slide *Precedenza degli operatori*
+
+#Esercizio grammatica libera per il linguaggio binario contenente tutte e sole le stringhe con più zeri che uni. O in generale tutte e sole le stringhe con un diverso numero di 1 e 0.
