--- a/5. Linguaggi context-free e grammatiche.md
+++ b/5. Linguaggi context-free e grammatiche.md
@@ -178,3 +178,96 @@ Grammatica che parsa correttamente tutte le espressioni aritmetiche:
 #completa con slide *Precedenza degli operatori*
 
 #Esercizio grammatica libera per il linguaggio binario contenente tutte e sole le stringhe con più zeri che uni. O in generale tutte e sole le stringhe con un diverso numero di 1 e 0.
+
+# Parser a discesa ricorsiva
+#Completa fino a slide 11
+>Un parser a discesa ricorsiva...
+>Può essere implementato come una collezione di procedure, una per ogni simbolo non terminale.
+
+## Parser non deterministico
+Pseudocode per **parser non deterministico**:
+```
+scegli opportunamente uan produzione A -> X1X2...Xk : Xj appartiene a V
+for j = 1 .. k (per ogni simbolo)
+	se Xj è non terinale
+		chiama Xj()
+	else
+		x = next_token()
+		if Xj != x then
+			error()
+```
+
+#Nota la conoscenza delle produzioni è cablata nello pseudocodice, non è quindi generalizzabile
+
+#Nota l'errore include anche EOF, ovvero sviluppo na frase che che termina prima del dovuto (dall'input)
+
+## Parser deterministico con backtracking
+Supposta `Xj` puntatore globale
+```
+Carico input in memoria
+saveInputPointer()
+for all production A -> X1X2...Xk : Xj in V
+	fail = False
+	for j in i..k
+		if Xj non-terminal and Xj() // procedura Xj va avanti e se ok torna true
+			continue
+		if Xj terminal
+			x = next_token()
+		if Xj == x
+			continue
+		restoreInputPointer() // torno indietro e provo a matchare altro
+		fail = True
+		break;
+	
+	if not fail
+		return True
+return False
+```
+
+L'assioma può essere sviluppato su tutto l'input (successo) o solo su un suo prefisso (fallimento):
+```
+if eof()
+	return True
+else
+	return  False
+```
+
+#Nota nell'albero di esempio si parte dalla foglia più a sinistra e poi si tenta di matchare verso le foglie di destra fino a quando non si ha successo con `b`
+#Completa Aggiungi immagine
+## Rimozione dei cicli
+#completa
+È necessario eliminare cicli diretti e indiretti, ovvero le ricorsioni sinistre.
+L'idea è quella di numerare le produzioni.
+#completa sotto con condizioni
+In base alla relazione tra gli indici di destra e sinistra ogni produzione può essere:
+- ciclo diretto
+- forward production
+- backward production
+#Completa con algoritmo diretto
+### Cicli diretti
+$$E \to E +E | E*E | (E) | number$$
+
+- $\alpha_1 = E+E$
+- $\alpha_2 = E*E$
+- $\beta_1 = (E)$
+- $\beta_2 = number$
+
+Le produzioni vegnono sostituite:
+- $E \to (E)E' | number E'$
+- $E' \to +EE'|*EE'|\epsilon$
+
+### Eliminazione delle backward production
+1. Per $A_1$ non può esistere una backward production
+2. Può esserci un ciclo diretto, eliminabile come sopra
+3. Ipotesi induttiva: per un dato indice $i \ge 2$ per i primi $i-1$ non terminali non ci sono backward production
+4. Condsideriamo $A_i$ e supponiamo che una delle sue produzioni siano di tipo backward: $A_i \to A_j\alpha |..., j < i$
+5. $A_j$ può essere sostituita con una ad una tutte le parti delle sue produzioni
+6. #Completa 
+
+## Codice di esempio
+- I simboli (la enum che contiene la rappresentazione dei simboli) sono definiti dal parser e rispettati dal lexer
+- Il file .lex importa la definizione
+- La struttura è `{integer} {value = std::stoi(yytext); return tok_num;}` oppure senza token value `"+" {return tok_plus;}`
+- Il lexer va compilato in un file oggetto, da linkare successivamente al parser
+- Inclusione di `FlexLexer.h` necessaria per il linking
+# Kaleidoscope
