--- a/3. Lexer.md
+++ b/3. Lexer.md
@@ -43,6 +43,9 @@ using namespace std;
 
 DIG [0-9]
 DIG1 [1-9]
+
+%option noyywrap C++
+
 %%
 "+" { cout << "operatore" << yytext[0] << endl; }
 "-" { ... }
@@ -53,7 +56,8 @@ DIG1 [1-9]
 
 `{DIG}{DIG}*` matcha i numeri naturali (positivi) esclusi gli zeri non significativi in testa al numero.
 
-Il lessema è memorizzato in `yytex`
+Il lessema è memorizzato in `yytex`.
+Cosa significa `noyywrap`? questa opzione ritorna il controllo al chiamante, ovvero il main, impedendo che il lexer chiami la funzione `yywrap()` dopo aver eseguito il lexer. Questa funzione è utile per passare il file successivo attraverso il lexer.
 
 Tipico `main`:
 ```cpp
@@ -63,3 +67,30 @@ int main(int argc, char **argv) {
 	return 0;
 }
 ```
+
+#Esercizio yywrap
+#Esercizio wc
+
+
+Usare un file *lex* come header di un programma Cpp, in cui è implementato il main:
+```bash
+g++ -c flex_output.cc # ottengo un object
+g++ -c main.cc # main deve includere flex_output come header
+g++ -o exec main.o flex_output.o
+```
+
+`g++` è un programma *driver*
+
+# Kaleidoscope
+>Un linguaggio funzione è un linguaggio che non richiede la gestione della memoria, a differenza di quelli imperativi. Si programma in modo dichiarativo ogni funzione che deve essere eseguita sui dati in ingresso, componendo funzionalmente il programma. Le funzioni non hanno side effects  -> sono funzioni matematiche.
+
+Le funzioni non strettamente matematiche usano side-effects.
+
+Useremo Kaleidoscope + flex + bison (per la grammatica). Vedi tutorial sul sito di LLVM.
+
+
+## Esercizio
+Ammettiamo 3 tipi di frasi: #Completa 
+#Completa: individua i tokens
+
+Posso passare optare per un approccio meno dichiarativo e più procedurale per l'analisi di keyword e simili. Chiamo funzione che verifica di cosa si tratta.
