--- a/13. Introduzione al backend.md
+++ b/13. Introduzione al backend.md
@@ -160,3 +160,99 @@ Supposto che a sia un array di interi (dimensione 4 byte), per accedere all'elem
 - a0 array base address
 - s0 offset register
 - s0 * 4 + a0 => (s0 << 2) + a0
+
+## Common Subexpression Elimination
+>Eliminazione del ricalcolo di una sottoespressione (*ridondante*) condivisa tra più istruzioni.
+
+```
+y = b * c + 3
+z = b * c + 10
+|
+v
+x = b * c
+y = x + 3
+z = x + 10
+```
+
+
+## Dead Code Elimination
+>Eliminazione del codice morto
+
+```
+if (100 < 0) { a = 5; }
+|
+v
+if (false) { }
+|
+v
+rimosso
+```
+
+## Copy propagation
+>Per statement x=y si sostituiscono gli usi futuri di x con y.
+
+È una generalizzazione della constant propagation. Spesso propedeutico alla DCE
+
+```
+x = y
+z = x + 1
+w = z + 4
+```
+Può diventare
+```
+DCE di x = y
+z = x + 1
+w = z + 4
+```
+
+### Constant propagation
+>**Definizione** di una variabile: istruzione in cui la variabile compare al LHS
+
+Es. di catena di ottimizzazioni in cui una è funzionale alle successive:
+```
+a = 3
+b = a + 1
+c = b + 4
+```
+Con una catena CP di a, CF su b, CP di b, CF su c, DCE su a e b supponendo che venga utilizzata solo c successivamente.
+
+## Loop Invariant Code Motion
+>Sposta istruzioni indipendenti dalle variabili legate al loop al di fuori del loop stesso, al fine di evitare calcoli ridondanti. Chiamata anche **code hoisting**.
+
+```
+while (i<100) {
+	x = i + x/y
+	y = ...
+}
+```
+
+Il calcolo di `x/y` viene spostato sopra:
+```
+z = x/y
+while (i<100) {
+	x = i + z
+	y = ...
+}
+```
+
+# Ottimizzazioni sui loop
+>**Spilling** (di un registro): trasferimento dei dati da un registro alla memoria principale.
+
+Vogliamo ridurre al minimo il *numero di spills*, perché le istruzioni di L/S sono costose.
+
+Dato che la maggior parte dei programmi spende il grosso del tempo in un loop, l'ottimizzazione di questi ultimi ha un grande impatto sulle performance.
+
+Le ottimizzazioni sui loop sono tipicamente propedeutiche a ottimizzazioni **machine-specific** eseguite dal backend:
+- **register allocation** ha il potere di diminuire il numero di spills
+- **instruction-level parallelism**
+- **data parallelism** è possibile sono su CPU multi-core o che supportano SIMD
+- **data-cache locality** se sfruttata bene migliora la performance minimizzando il costo di accesso in memoria (il numero di *cache miss*)
+
+#Rivedi data-hazard, instruction scheduling, bubble/NOP, VLIW - Very Long Instruction Word - (se il processore lo supporta permettono di specificare quali istruzioni eseguire in parallelo).
+#Nota la differenza tra ILP e DP
+
+# Recap
+Un sistema può essere reso più performante principalmente in 3 modi:
+- Riduzione del numero di istruzioni
+- Minimizzazione delle *cache miss*
+- Sfruttando il parallelismo: SPMD, - Single Program Multiple Data, MPMD - Multiple Program Multiple Data
